k8s/copyright-tool/copyright-tool-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyright-tool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: copyright-tool
  template:
    metadata:
      labels:
        app: copyright-tool
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/copyright-tool
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
