k8s/copyright-tool/copyright-tool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: copyright-tool
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: copyright-tool
