k8s/copyright-tool/copyright-tool-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: copyright-tool
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - regeljerechten.nl
      secretName: regeljerechten-tls
  rules:
    - host: regeljerechten.nl
      http:
        paths:
          - backend:
              serviceName: copyright-tool
              servicePort: 80
